Configure project for cloud deployment (Vercel + Render + Neon)